# circles-nethermind-plugin

./: .dockerignore  .editorconfig  .env.example  .env.local.example  .gitignore  .gitmodules  Circles.sln  DEVELOPMENT.md  Directory.Build.props  Directory.Packages.props  Makefile  README.md  Readme.md  all_tables.html  arm64.Dockerfile  context7.json  docker-compose.chiado.yml  docker-compose.gnosis.yml  docker-compose.spaceneth.yml  general-example-requests.md  invitation-escrow-example-requests.md  pathfinder-host.Dockerfile  rpc-host.Dockerfile  trust-missing-avatars.Dockerfile  v1-example-requests.md  v2-example-requests.md  x64.Dockerfile  x64.debug.Dockerfile  x64.debug.spaceneth.Dockerfile
.github/: dependabot.yml
Circles.Analysis/: Circles.Analysis.csproj  Program.cs
Circles.Index.ApiTester/: Program.cs
Circles.Index.Balancer/: Circles.Index.Balancer.csproj  DatabaseSchema.cs  Events.cs  LogParser.cs
Circles.Index.CirclesV1/: Circles.Index.CirclesV1.csproj  DatabaseSchema.cs  Events.cs  IIndexedEventV1.cs  LogParser.cs
Circles.Index.CirclesV1.NameRegistry/: Circles.Index.CirclesV1.NameRegistry.csproj  DatabaseSchema.cs  LogParser.cs
Circles.Index.CirclesV2.AffiliateGroupRegistry/: DatabaseSchema.cs
Circles.Index.CirclesV2.BaseGroupDeployer/: DatabaseSchema.cs
Circles.Index.CirclesV2.CMGroupDeployer/: DatabaseSchema.cs
Circles.Index.Common/: Node.cs  (+23 more)
Circles.Pathfinder.Cpp/: CMakeLists.txt  README.md
Circles.Pathfinder.Cpp/Queries/: balanceQuery.sql  trustQuery.sql
Circles.Pathfinder.Cpp/src/: AddressIdPool.cpp  AddressIdPool.hpp  main.cpp
(+1138 files in other folders)
